--- a/public/About.html
+++ b/public/About.html
@@ -1,1 +1,88 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Us | GreenRoots Community Garden</title>
+  <meta name="description" content="Learn about GreenRoots Community Garden – a space where neighbors come together to grow food, share knowledge, and build a sustainable, vibrant community." />
+  <link rel="stylesheet" href="about.css" />
+</head>
+<body>
+  <header class="navbar" role="banner">
+    <div class="container">
+      <nav aria-label="Main navigation">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html" class="active" aria-current="page">About</a></li>
+          <li><a href="weather.html">Weather</a></li>
+          <li><a href="events.html">Events</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container about-content" role="main">
+    <h1>About GreenRoots Community Garden</h1>
+
+    <p>
+      Welcome to <strong>GreenRoots Community Garden</strong> — a green space where neighbors, families, and friends come together to grow fresh produce, connect with nature, and cultivate a stronger community. Our garden is built on shared values of sustainability, inclusivity, and learning.
+    </p>
+
+    <section>
+      <h2>Our Mission</h2>
+      <p>
+        Our mission is to foster a healthier, greener neighborhood by creating an accessible space for people of all ages and backgrounds to grow food, share gardening knowledge, and build lasting relationships. We believe gardening can heal, empower, and unite communities.
+      </p>
+    </section>
+
+    <section>
+      <h2>What We Offer</h2>
+      <ul>
+        <li><strong>Garden Plots:</strong> Rentable raised beds for individuals or families to grow vegetables, herbs, and flowers.</li>
+        <li><strong>Workshops & Classes:</strong> Learn about composting, organic gardening, seed saving, and more.</li>
+        <li><strong>Volunteer Programs:</strong> Get involved in maintaining shared spaces and supporting local food banks.</li>
+        <li><strong>Community Events:</strong> Join seasonal festivals, harvest celebrations, and planting days.</li>
+        <li><strong>Children’s Garden:</strong> A safe and fun learning area for kids to dig, plant, and discover nature.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Why It Matters</h2>
+      <p>
+        In a world that's becoming increasingly fast-paced and disconnected, our community garden offers a space to slow down, breathe fresh air, and work together toward a common goal. Whether you're a seasoned gardener or just getting started, there's a place for you here.
+      </p>
+    </section>
+
+    <section>
+      <h2>Our Story</h2>
+      <p>
+        GreenRoots began in 2018 as a local initiative by a group of passionate residents who saw an opportunity to turn an unused lot into something meaningful. Through grants, donations, and lots of love, the space has grown into a thriving hub of greenery, education, and community spirit.
+      </p>
+    </section>
+
+    <section>
+      <h2>Get Involved</h2>
+      <p>
+        We welcome new members, volunteers, and supporters! Whether you want to grow your own vegetables, help out at events, or just learn something new, we'd love to have you on board.
+      </p>
+      <p>
+        Visit our <a href="events.html">Events</a> page for upcoming opportunities, or reach out through our contact form to learn more.
+      </p>
+    </section>
+
+    <section>
+      <h2>Stay Connected</h2>
+      <p>
+        Follow us on social media and subscribe to our monthly newsletter to get the latest garden updates, event invites, and seasonal gardening tips.
+      </p>
+    </section>
+  </main>
+
+  <footer role="contentinfo">
+    <div class="container">
+      <p>&copy; 2025 GreenRoots Community Garden | Nurturing community through nature 🌿</p>
+    </div>
+  </footer>
+</body>
+</html>
 
